--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 7.5em;
+    height: 120px;
   }
   &__btn {
     background-color: transparent;
@@ -23,26 +23,26 @@
 }
 
 .menu {
-  padding-left: 0.3em;
-  padding-right: 3.75em;
+  padding-left: 60px;
+  padding-right: 60px;
   &__list {
     display: flex;
   }
   &__list-item {
-    padding-left: 2.8em;
-    padding-right: 2.18em;
+    padding-left: 45px;
+    padding-right: 35px;
   }
   &__list-link {
     @extend %title-font;
     color: rgba(54, 56, 56, 0.9);
-    line-height: 1.3em;
+    line-height: 22px;
   }
 }
 
 .footer {
   &__content {
     background-color: #DFDFDF;
-    padding: 3.7em 0 5em;
+    padding: 60px 0 80px;
   }
   &__inner {
     display: flex;
@@ -51,38 +51,38 @@
   &__info-title {
     color: $title;    
     @extend %title-font;
-    margin-bottom: .9em;
-    line-height: 1.4em;
+    margin-bottom: 15px;
+    line-height: 23px;
   }
   &__info-text {    
-    margin-bottom: 1em;
+    margin-bottom: 16px;
   }
   &__info-email {
     display: inline-block;
     font-weight: 600;
     color: $title;
-    font-size: .9em;
-    margin-bottom: 1.4em;
-    padding-left: 1.9em;
+    font-size: 14px;
+    margin-bottom: 22px;
+    padding-left: 30px;
     position: relative;
     &::before {
       content: '';
       background-image: url(../images/letter.svg);
       position: absolute;
       left: 0;
-      width: 1em;
-      height: .75em;
-      top: .5em;
+      width: 16px;
+      height: 12px;
+      top: 8px;
     }
   }
   &__form {
     display: flex;
   }
   &__form-input {
-    padding: .4em .6em .4em 1.1em;
+    padding: 6px 10px 6px 18px;
     background-color: transparent;
     border: 1px solid rgba($title, .7);
-    border-radius: 1.3em;
+    border-radius: 20px;
     width: 100%;
     &::placeholder {
       font-family: 'Open Sans', sans-serif;
@@ -94,28 +94,28 @@
     background-color: $title;
     border: none;
     color: #fffff0;
-    border-radius: 1.3em;
+    border-radius: 21px;
     font-weight: 600;
-    padding: .4em .7em;
-    min-width: 10em;
+    padding: 6px 12px;
+    min-width: 160px;
     cursor: pointer;
-    margin-left: .6em;
+    margin-left: 9px;
   }
   &__social {
-    width: 7.9em;    
+    width: 125px;    
     margin-right: auto;
-    margin-left: 7em;
+    margin-left: 100px;
   } 
   &__social-link {
-    padding-left: 1.7em;
+    padding-left: 28px;
     position: relative;
     &::before {
       content: '';
       position: absolute;
-      top: .1em;
+      top: 2.4px;
       left: 0;
-      width: 1em;   
-      height: 1em;   
+      width: 16px;   
+      height: 16px;   
     }
   }
   &__social-link--facebook::before{
@@ -123,43 +123,43 @@
   }
   &__social-link--instagram::before{
     background-image: url(../images/instagram.svg);
-    width: .88em;
-    height: .92em;  
+    width: 14px;
+    height: 15px;  
   }
   &__social-link--pinterest::before{
     background-image: url(../images/pinterest.svg)
   }
   &__social-link--whatsapp::before{
     background-image: url(../images/whatsapp.svg);
-    width: .88em;
-    height: .88em;
+    width: 14px;
+    height: 14px;
   }
   &__social-link--youtube::before{
     background-image: url(../images/youtube.svg);
-    top: .15em;
-    width: 1.1em;
-    height: .75em;
+    top: 3px;
+    width: 18px;
+    height: 12px;
   }
   &__social-item,
   &__menu-item { 
-    margin-bottom: 1em;
+    margin-bottom: 15px;
     font-weight: 600;
-    font-size: .8em;
+    font-size: 14px;
   }
   &__social-link,
   &__menu-link { 
     color: #707070;
   }
   &__menu {
-    margin-right: 5.5em;
-    width: 7.8em;
+    margin-right: 60px;
+    width: 125px;
   }
  
   &__copyright {
     background-color: $title;
     color: #A1A1A1;
     text-align: center;
-    padding: 2.5em 0 2.5rem;
+    padding: 42px 0 41px;
   }
 }
 .rightside-menu {
@@ -168,10 +168,10 @@
   top: 0;
   bottom: 0;
   width: 100%;
-  max-width: 43em;
+  max-width: 694px;
   background-color: #fff;
-  padding-top: 2.5em;
-  box-shadow: -.06em -1em 1.1em .1px;
+  padding-top: 40px;
+  box-shadow: 0 6px 20px 6px;
   transition: all .6s;
   &.rightside-menu--close {
     transform: translateX(500%);
@@ -180,25 +180,26 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
-    margin-left: 3em;    
+    margin-left: 50px;     
     padding: 0;
   }
   &__content {
    text-align: center;
-   max-width: 30em;
+   max-width: 485px;
    margin: 0 auto;
   }
   &__logo {
     display: inline-block;
-    margin-right: 3em;
+    margin-right: 40px;
   }
   &__title {
     @extend %title-font;
-    font-size: 2.2em;
-    line-height: 2.2em;
+    font-size: 36px;
+    line-height: 51px;
     color: $title;
     position: relative;
-    margin-bottom: .5em;
+    margin-bottom: 17px;
+    padding-bottom: 17px;
     &::after {
       content: '';
       position: absolute;
@@ -206,29 +207,29 @@
       margin: 0 auto;
       left: 0;
       right: 0;
-      height: 0.02em;
+      height: 1px;
       background-color: #979797;
-      max-width: 7em;
+      max-width: 252px;
     }
   }
   &__text {
-    margin-bottom: 4.7em;
+    margin-bottom: 75px;
   }
   &__images {
-    max-width: 30em;
+    max-width: 485px;
   }
 }
 
 .top {
   &__inner{
-    padding-bottom: 4.3em;
+    padding-bottom: 70px;
     position: relative;
     &::after{
       content: '';
       background-image: url(../images/slider-bg.jpg);
       position: absolute;
       width: 100%;
-      height: 45em;
+      height: 722px;
       top: 0;
       z-index: -1;
     }
@@ -240,36 +241,121 @@
   }
   &__slider-img {
     margin-left: -11%;
-    max-width: 44em;
-    height: 51em;
+    max-width: 703px;
+    height: 815px;
     object-fit: cover;
   }
   &__slider-info {
-    max-width: 40em;
-    margin-left: 1.5em;
+    max-width: 645px;
+    margin-left: 24px;
 
   }
   &__slider-title {
     @extend %title-font;
     color: $title;
-    font-size: 6.9em;
-    line-height: 1.2em;
-    padding-bottom: .3em;
+    font-size: 110px;
+    line-height: 135px;
+    padding-bottom: 26px;
     position: relative;
     &::after {
       content: '';
       position: absolute;
       left: 0;
       bottom: 0;
-      width: 2em;
-      height: .012em;      
+      width: 185px;
+      height: 1px;      
       background-color: #979797;
     }
   }
   &__slider-text {
-    padding-top: .6em;
-    max-width: 36em;
+    padding-top: 9px;
+    max-width: 576px;
     color: #5A5A5A;
   }
 
+}
+
+.new-collection {
+  text-align: center;
+  padding: 45px 0 145px;
+  &__title {
+    color: $title;
+    font-size: 36px;
+    line-height: 51px;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      width: 250px;
+      height: 1px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      background: #6D7278;
+    }
+  }
+  &__text {    
+    max-width: 730px;
+    margin: 0 auto 27px;
+  }
+}
+
+.collection {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 30px;
+  &__item {
+    position: relative;
+    &:hover {
+      .collection__info{
+        opacity: 1;
+      }     
+    }    
+  }
+  &__images {
+    min-height: 350px;
+    object-fit: cover;
+  }
+  &__info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(#fff, .7);
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all .7s;
+  }
+  &__info-title {
+    font-size: 20px;
+    line-height: 25px;
+    color: $title;
+    padding-bottom: 19px;
+    margin-bottom: 19px;
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      height: 1px;
+      width: 80%;
+      background: #6D7278;
+      margin: 0 auto;
+      left: 0;
+      right: 0;
+    }
+  }
+  &__info-text {
+    font-weight: 600;
+    font-size: 14px;
+    color: #707070;
+  }
 }
