create next block

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,7 +1,15 @@
 $title: #363838;
 $default: #5A5A5A;
 
-%title-font{
+%title-font {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
+}
+%line-decor {
+  position: absolute;
+  height: 1px;
+  bottom: 0;    
+  background: #6D7278;
+  left: 0;
+  right: 0;
 }
