--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -259,12 +259,8 @@
     position: relative;
     &::after {
       content: '';
-      position: absolute;
-      left: 0;
-      bottom: 0;
+      @extend %line-decor;
       width: 185px;
-      height: 1px;      
-      background-color: #979797;
     }
   }
   &__slider-text {
@@ -287,14 +283,9 @@
     position: relative;
     &::after {
       content: '';
-      position: absolute;
+      @extend %line-decor;
       width: 250px;
-      height: 1px;
-      bottom: 0;
-      left: 0;
-      right: 0;
       margin: 0 auto;
-      background: #6D7278;
     }
   }
   &__text {    
@@ -343,19 +334,105 @@
     position: relative;
     &::after {
       content: '';
-      position: absolute;
-      bottom: 0;
-      height: 1px;
+      @extend %line-decor;
       width: 80%;
-      background: #6D7278;
       margin: 0 auto;
-      left: 0;
-      right: 0;
     }
   }
   &__info-text {
     font-weight: 600;
     font-size: 14px;
     color: #707070;
+  }
+}
+
+.decor {
+  padding: 170px 0 175px;
+  background-image: url(../images/decor-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;  
+  &__title {
+    color: $title;
+    @extend %title-font;
+    font-size: 60px;
+    line-height: 80px;
+    max-width: 730px;
+    padding-bottom: 22px;
+    margin-bottom: 22px;
+    position: relative;
+    &::after{
+      content: '';
+      @extend %line-decor;
+      width: 25%;
+    }
+  }
+  &__text {
+    max-width: 540px;
+  }
+}
+
+.works-path {
+  padding: 80px 0 30px;
+  &__title {
+    @extend %title-font;
+    text-align: center;
+    color: $title;
+    margin-bottom: 40px;
+    font-size: 36px;
+    line-height: 51px;
+  }
+  &__items-box {
+    display: flex;   
+    align-items: flex-end;
+    border-bottom: 2px solid rgba($title, .7); 
+    position: relative;
+    &::after {
+      content: '';
+      @extend %line-decor;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      bottom: -5px;
+    }
+  }
+  &__item {
+    width: 250px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    position: relative;
+    height: 100%;
+  }
+  &__item--production {
+    margin-left: 317px;
+    &::after {
+      content: '';
+      @extend %line-decor;
+      width: 2px;
+      height: 20px;
+    }
+  }
+  &__item--production,
+  &__item--consultation {
+    padding-bottom: 38px;
+  }
+  &__item--measuring {
+    padding-top: 38px;
+    margin-left: 305px;
+    &::after {
+      content: '';
+      @extend %line-decor;
+      width: 2px;
+      height: 20px;
+      top: 0;
+    }
+  }
+  &__item-title {
+    margin-left: 13px;
+    color: $title;
+    @extend %title-font;
+  }
+  &__item-text {
+    margin-top: 13px;
   }
 }
