--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -23,8 +23,7 @@
 }
 
 .menu {
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-right: 10px;
   &__list {
     display: flex;
   }
@@ -36,6 +35,15 @@
     @extend %title-font;
     color: rgba(54, 56, 56, 0.9);
     line-height: 22px;
+  }
+  &__list-link--active {
+    padding-bottom: 4px;
+    position: relative;
+    &::after {
+      content: '';
+      @extend %line-decor;
+      height: 2px;      
+    }
   }
 }
 
@@ -49,7 +57,6 @@
     justify-content: space-between;
   }
   &__info-title {
-    color: $title;    
     @extend %title-font;
     margin-bottom: 15px;
     line-height: 23px;
@@ -167,6 +174,7 @@
   right: 0;
   top: 0;
   bottom: 0;
+  z-index: 5;
   width: 100%;
   max-width: 694px;
   background-color: #fff;
@@ -196,7 +204,6 @@
     @extend %title-font;
     font-size: 36px;
     line-height: 51px;
-    color: $title;
     position: relative;
     margin-bottom: 17px;
     padding-bottom: 17px;
@@ -217,6 +224,27 @@
   }
   &__images {
     max-width: 485px;
+  }
+}
+
+.breadcrumbs {
+  background: rgba(#DFDFDF, .5);
+  padding: 13px 14px;
+  &__list {
+    display: flex;
+  }
+  &__item::after {
+    content: '/';
+    margin-left: -4;
+    margin-right: 4px;
+  }
+  &__item:last-child::after {
+    display: none;
+  }
+  &__link {
+    font-size: 14px;
+    font-weight: 400;
+    color: $default;
   }
 }
 
@@ -252,7 +280,6 @@
   }
   &__slider-title {
     @extend %title-font;
-    color: $title;
     font-size: 110px;
     line-height: 135px;
     padding-bottom: 26px;
@@ -352,7 +379,6 @@
   background-size: cover;
   background-repeat: no-repeat;  
   &__title {
-    color: $title;
     @extend %title-font;
     font-size: 60px;
     line-height: 80px;
@@ -376,7 +402,6 @@
   &__title {
     @extend %title-font;
     text-align: center;
-    color: $title;
     margin-bottom: 40px;
     font-size: 36px;
     line-height: 51px;
@@ -429,10 +454,106 @@
   }
   &__item-title {
     margin-left: 13px;
-    color: $title;
     @extend %title-font;
   }
   &__item-text {
     margin-top: 13px;
+  }
+}
+
+.gallery {
+  padding: 80px 0 90px;
+  &__buttons {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  &__btn {
+    margin: 0 13px;
+    background-color: transparent;
+    border: 1px solid #454647;
+    border-radius: 20px;
+    padding: 6px 16px;
+    color: #8F8D8D;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  .mixitup-control-active {
+   background-color: #FFEF35;
+   color: $title;
+  }
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 30px 32px;
+  }
+  &__item:first-child {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+  &__img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-width: 1148px;
+  }
+}
+
+.blog-box {
+  padding-bottom: 100px;
+  &__title{
+    color: $title;
+    @extend %title-font;
+    font-size: 36px;
+    line-height: 51px;
+    margin: 0 auto 30px;
+    text-align: center;
+    max-width: 430px;
+  }
+  &__items {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;    
+  }
+  &__img-link {
+    margin-bottom: 19px;
+    display: inline-block;    
+  }
+  &__links {
+    margin-bottom: 9px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #707070;    
+  }
+  &__date,
+  &__author,
+  &__theme {
+    color: inherit;    
+  }
+  &__item-title {
+    @extend %title-font;
+    font-size: 24px;
+    line-height: 38px;
+  }
+}
+
+.about {
+  &__prev {
+    background-image: url(../images/about-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    text-align: center;
+    padding: 160px 0;
+    margin-top: -53px;
+  }
+  &__prev-title {
+    @extend %title-font;
+    font-size: 60px;
+    line-height: 80px;
+  }
+  &__content {
+    padding: 130px 0 40px;
   }
 }
