completed second page

--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -14,7 +14,7 @@ ul[class], ol[class] {
   padding: 0;
 }
 
-body, h1, h2, h3, h4, h5, h6, ul, ol, li, figure, figcaption, blockquote, dl, dd {
+body, p, h1, h2, h3, h4, h5, h6, ul, ol, li, figure, figcaption, blockquote, dl, dd {
   margin: 0;
   font-size: inherit;
 }
