--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -14,3 +14,10 @@ $default: #5A5A5A;
   left: 0;
   right: 0;
 }
+
+@function max($numbers...) {
+ @return m#{a}x(#{$numbers});
+}
+@function min($numbers...) {
+ @return m#{i}x(#{$numbers});
+}
