--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -276,7 +276,6 @@
   &__slider-info {
     max-width: 645px;
     margin-left: 24px;
-
   }
   &__slider-title {
     @extend %title-font;
@@ -291,7 +290,7 @@
     }
   }
   &__slider-text {
-    padding-top: 9px;
+    padding-top: 26px;
     max-width: 576px;
     color: #5A5A5A;
   }
@@ -300,7 +299,7 @@
 
 .new-collection {
   text-align: center;
-  padding: 45px 0 145px;
+  padding: 45px 0 35px;
   &__title {
     color: $title;
     font-size: 36px;
@@ -325,6 +324,7 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 30px;
+  padding-bottom: 70px;
   &__item {
     position: relative;
     &:hover {
@@ -503,7 +503,6 @@
 .blog-box {
   padding-bottom: 100px;
   &__title{
-    color: $title;
     @extend %title-font;
     font-size: 36px;
     line-height: 51px;
@@ -539,6 +538,7 @@
 }
 
 .about {
+  padding-bottom: 98px;
   &__prev {
     background-image: url(../images/about-bg.jpg);
     background-repeat: no-repeat;
@@ -555,5 +555,109 @@
   }
   &__content {
     padding: 130px 0 40px;
+
+  }
+  &__title {
+    @extend %title-font;
+    font-size: 36px;
+    line-height: 60px;
+    width: 822px;
+    padding-bottom: 20px;
+    margin-bottom: 23px;
+    position: relative;
+    &::after {
+      content: '';
+      @extend %line-decor;
+      width: 200px;
+    }
+  }
+  &__text {
+    margin-left: 285px;
+    p {
+    margin-bottom: 30px;
+    }
+  }
+  &__popup {
+    background-image: url(../images/popup.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    min-height: 414px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.inspiration {
+
+  position: relative;
+  height: 551px;  
+  &::after {    
+    content: '';
+    @extend %line-decor;
+    background-image: url(../images/inspiration-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    height: 414px;
+    z-index: -1;
+  }
+  &__inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__images {    
+    margin-right: 78px;
+    margin-left: -230px;
+  }
+  &__title {
+    font-size: 36px;
+    line-height: 50px;
+    @extend %title-font;
+    padding-bottom: 15px;
+    margin-bottom: 23px;
+    position: relative;
+    &::after{
+      content: '';
+      @extend %line-decor;
+      width: 200px;
+    }
+  }
+  &__text {
+    margin-bottom: 30px;
+  }
+  &__content {
+    max-width: 824px;
+  }
+  &__item {
+    @extend %title-font;
+    line-height: 23px;
+    margin-bottom: 33px;
+  }
+  &__item-content {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 14px;
+    border-bottom: 2px solid #fff;
+    border-radius: 4px;
+  }
+  &__line {
+    height: 2px;
+    background-color: $title;
+    border-radius: 4px;
+    margin-top: -2px;
+  }
+}
+
+.partners {
+  padding: 16px 0 60px;
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+  &__item {
+    margin: 0 auto;
   }
 }
