--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -40,7 +40,6 @@
     padding-bottom: 4px;
     position: relative;
     &::after {
-      content: '';
       @extend %line-decor;
       height: 2px;      
     }
@@ -63,24 +62,6 @@
   }
   &__info-text {    
     margin-bottom: 16px;
-  }
-  &__info-email {
-    display: inline-block;
-    font-weight: 600;
-    color: $title;
-    font-size: 14px;
-    margin-bottom: 22px;
-    padding-left: 30px;
-    position: relative;
-    &::before {
-      content: '';
-      background-image: url(../images/letter.svg);
-      position: absolute;
-      left: 0;
-      width: 16px;
-      height: 12px;
-      top: 8px;
-    }
   }
   &__form {
     display: flex;
@@ -230,6 +211,8 @@
 .breadcrumbs {
   background: rgba(#DFDFDF, .5);
   padding: 13px 14px;
+  position: relative;
+  z-index: 999;
   &__list {
     display: flex;
   }
@@ -283,8 +266,7 @@
     line-height: 135px;
     padding-bottom: 26px;
     position: relative;
-    &::after {
-      content: '';
+    &::after {;
       @extend %line-decor;
       width: 185px;
     }
@@ -308,7 +290,6 @@
     margin-bottom: 25px;
     position: relative;
     &::after {
-      content: '';
       @extend %line-decor;
       width: 250px;
       margin: 0 auto;
@@ -360,7 +341,6 @@
     margin-bottom: 19px;
     position: relative;
     &::after {
-      content: '';
       @extend %line-decor;
       width: 80%;
       margin: 0 auto;
@@ -387,7 +367,6 @@
     margin-bottom: 22px;
     position: relative;
     &::after{
-      content: '';
       @extend %line-decor;
       width: 25%;
     }
@@ -412,7 +391,6 @@
     border-bottom: 2px solid rgba($title, .7); 
     position: relative;
     &::after {
-      content: '';
       @extend %line-decor;
       width: 10px;
       height: 10px;
@@ -431,7 +409,6 @@
   &__item--production {
     margin-left: 317px;
     &::after {
-      content: '';
       @extend %line-decor;
       width: 2px;
       height: 20px;
@@ -445,7 +422,6 @@
     padding-top: 38px;
     margin-left: 305px;
     &::after {
-      content: '';
       @extend %line-decor;
       width: 2px;
       height: 20px;
@@ -492,11 +468,17 @@
     grid-column: span 2;
     grid-row: span 2;
   }
-  &__img {
+  &__item img {
     object-fit: cover;
     width: 100%;
     height: 100%;
     max-width: 1148px;
+  }
+  &.gallery-page {
+    .gallery__item:nth-child(8){
+      grid-column: span 2;
+      grid-row: span 2;
+    }
   }
 }
 
@@ -566,7 +548,6 @@
     margin-bottom: 23px;
     position: relative;
     &::after {
-      content: '';
       @extend %line-decor;
       width: 200px;
     }
@@ -590,11 +571,9 @@
 }
 
 .inspiration {
-
   position: relative;
   height: 551px;  
   &::after {    
-    content: '';
     @extend %line-decor;
     background-image: url(../images/inspiration-bg.png);
     background-repeat: no-repeat;
@@ -620,7 +599,6 @@
     margin-bottom: 23px;
     position: relative;
     &::after{
-      content: '';
       @extend %line-decor;
       width: 200px;
     }
@@ -659,5 +637,58 @@
   }
   &__item {
     margin: 0 auto;
+  }
+}
+
+.map {
+  margin-top: -53px;
+  margin-bottom: 50px;
+}
+
+.contact {
+  padding-bottom: 100px;
+  &__title {
+    @extend %title-font;
+    font-size: 36px;
+    line-height: 60px;
+    padding-bottom: 25px;
+    margin-bottom: 40px;
+    position: relative;
+    &::after {
+      @extend %line-decor;
+      width: 200px;
+    }
+  }
+.contact__social {
+    padding-left: 284px;
+    margin-bottom: 20px;
+    display: flex;
+    &__social-item, .contact__social-img {
+      padding-left: 40px;
+    }
+  }
+  &__text {
+    margin-bottom: 10px;
+  }
+  &__box {
+    padding-left: 284px;
+  }
+  &__phone {
+    color: $default;
+  }
+  &__city {
+    margin-bottom: 16px;
+  }
+  &__form {
+    padding-left: 284px;
+  }
+  &__form-input {
+
+  }
+  &__form-area {
+
+  }
+  &__form-btn {
+    
   }
 }
