--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -155,7 +155,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  z-index: 5;
+  z-index: 15;
   width: 100%;
   max-width: 694px;
   background-color: #fff;
@@ -212,7 +212,7 @@
   background: rgba(#DFDFDF, .5);
   padding: 13px 14px;
   position: relative;
-  z-index: 999;
+  z-index: 10;
   &__list {
     display: flex;
   }
@@ -806,8 +806,88 @@
   &__social-item {
     margin-right: 20px;
   }
-
+  &__items {
+    max-width: 730px;
+  }
+  &__item {
+    margin-bottom: 80px;
+  }
+  &__item-img {
+    min-width: 730px;
+  }
+  &__item-info {
+    padding: 25px 0 10px;
+    font-size: 14px;
+    font-weight: 600;
+    a{
+      color: inherit;
+    }
+  }
+  &__item-title {
+    font-size: 24px;
+    line-height: 38px;
+    margin-bottom: 26px;
+    @extend %title-font;
+  }
+  &__blockquote {
+    background: rgba(223, 223, 223, 0.5);
+    margin-bottom: 50px;
+    padding: 54px 64px;
+    font-size: 24px;
+    line-height: 38px;
+    font-weight: 300;
+    font-style: italic;
+    text-align: center;
+  }
+  &__blockquote-author {
+    font-size: 16px;
+    line-height: 22px;
+    @extend %title-font;
+    margin-top: 23px;
+    padding-top: 23px;
+    position: relative;
+    font-style: normal;
+    &::after {
+      @extend %line-decor;
+      height: 1px; 
+      width: 200px;    
+      top: 0; 
+      margin: 0 auto;
+    }
+  }
+  &__item-popup {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
+
+.article-popup {
+  &__box {
+    position: relative;
+  }
+}
+
+.article-slider {
+  &__arrow {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+    cursor: pointer;
+  }
+  &__arrowLeft {
+      left: 16px;
+  }
+  &__arrowRight {
+      right: 16px;
+  }
+}
+
 .recent-posts {
   margin-bottom: 40px;
   &__title {
@@ -819,8 +899,6 @@
   &__item-title {
     display: block;
     color: inherit;
-  }
-  &__list {
   }
   &__item {     
     margin-bottom: 11px;
