--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -937,7 +937,204 @@
     right: 13px;
     cursor: pointer;
   }
-  &__search-img {
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  &__arrow {
+    margin: 0 6px;
+  }
+  &__arrow--disabled {
+    opacity: 0;
+    pointer-events: none;
+  }
+  &__arrow-icon {
+  }
+  &__list {
+    display: flex;    
+  }
+  &__list-item {
+    margin: 0 6px;
+  }
+  &__list-num {
+    font-weight: 600;
+    font-size: 14px;
+    color: #707070;
+  }
+  &__list-num--active {
+    color: $title;
   }
 }
 
+.blog-one__item {
+  p {
+    margin-bottom: 40px;
+
+  }
+  blockquote {    
+    margin-bottom: 30px;
+    padding: 0 40px;
+    color: $title;
+    font-size: 24px;
+    line-height: 38px;
+    font-weight: 300;
+    font-style: italic;
+  }
+  .blog__blockquote-author::after {
+    margin-right: auto;
+    margin-left: 0;
+  }
+}
+
+.blog-one {
+  &__tags {
+    margin-bottom: 30px;
+  }
+  &__tags-title {
+    margin-bottom: 15px;
+    @extend %title-font;
+    font-size: 20px;
+    line-height: 31px;
+  }
+  &__tags-link {
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-right: 23px;
+    padding: 0 16px;
+    font-size: 14px;
+    color: #8F8D8D;
+    border: 1px solid rgba(#454647, .5);
+    border-radius: 14px;
+  }
+  &__links {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 0 32px;
+    border-top: 1px solid #DFDFDF;
+    border-bottom: 1px solid #DFDFDF;
+    margin-bottom: 35px;
+  }
+  &__link {
+    width: 243px;
+    position: relative;
+    color: #707070;
+    font-size: 14px;
+    font-weight: 600;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 12px;
+      height: 23px;
+    }
+  }
+  &__link-prev {
+    padding-left: 44px;
+    &::after {
+      background-image: url(../images/arrow-prev.svg);
+      left: 0;
+    }
+  }
+  &__link-next {
+    padding-right: 44px;
+    text-align: right;
+  &::after {
+    background-image: url(../images/arrow-next.svg);
+    right: 0;
+   }
+  } 
+  &__comments-title {
+    @extend %title-font;
+    font-size: 20px;
+    line-height: 31px;
+    margin-bottom: 15px;
+  }
+  &__comments-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 40px;
+  }
+  &__comments-avatar {
+    width: 64px;
+    height: 64px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 13px;
+  }
+  &__comments-name {
+    @extend %title-font;
+    line-height: 23px;    
+  }
+  &__comments-date {
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: #A1A1A1;
+  }
+  &__reply {
+    background-color: transparent;
+    margin-left: 5px;
+    border: none;
+    padding: 0;
+    font-size: 14px;
+    font-weight: 600;
+    color: #707070;
+    cursor: pointer;
+  }
+  &__form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  &__form-title {
+    margin-bottom: 25px;
+    @extend %title-font;
+    line-height: 23px; 
+  }
+  &__form-textarea {
+    width: 100%;
+    border: 1px solid #DFDFDF;
+    border-radius: 24px;
+    padding: 14px 17px;
+    min-width: 125px;
+    resize: none;
+    margin-bottom: 20px;
+    &::placeholder{
+      color: #A1A1A1;
+      font-size: 16px; 
+      line-height: 28px;     
+    }
+  }
+  &__form-input {
+    border: 1px solid #DFDFDF;
+    border-radius: 20px;
+    padding: 6px 17px;
+    margin-bottom: 20px;
+    width: 48%;
+    &::placeholder{
+      color: #A1A1A1;
+      font-size: 16px;      
+    }
+  }
+  &__form-label {
+    width: 100%;
+    margin-bottom: 20px;
+    font-size: 14px;
+    color: #A1A1A1;
+  }
+  &__form-labelinput {
+  }
+  &__form-btn {
+    border: none;
+    background-color: $title;
+    color: #FFFFF0;
+    font-weight: 600;
+    border-radius: 21px;
+    padding: 6px 60px;
+    cursor: pointer;
+  }
+}
