--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -17,6 +17,7 @@
     padding: 0;
     cursor: pointer;
   }
+  
 .logo {
   margin: 0 auto;
 }
@@ -1138,3 +1139,5 @@
     cursor: pointer;
   }
 }
+
+@import 'media';
