--- a/docs/scss/_global.scss
+++ b/docs/scss/_global.scss
@@ -6,15 +6,14 @@ body{
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 27px;
-  color: $default;
-  overflow-x: hidden;
-  min-width: 320px;
+  color: $default;  
+  min-width: 300px;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  position: relative;
 }
 
 .main {
