--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -15,12 +15,11 @@
     background-color: transparent;
     border: none;
     padding: 0;
-    cursor: pointer;
+    cursor: pointer;  
+  }  
+  &__btn-menu {
+    display: none;
   }
-  
-.logo {
-  margin: 0 auto;
-}
 }
 
 .menu {
@@ -63,6 +62,7 @@
   }
   &__info-text {    
     margin-bottom: 16px;
+    width: 470px;
   }
   &__form {
     display: flex;
@@ -216,11 +216,15 @@
   z-index: 10;
   &__list {
     display: flex;
+    overflow-x: auto;
+  }
+  &__item {
+    position: relative;
+    padding-right: 8px;
   }
   &__item::after {
+    position: absolute;
     content: '/';
-    margin-left: -4;
-    margin-right: 4px;
   }
   &__item:last-child::after {
     display: none;
@@ -267,7 +271,7 @@
     line-height: 135px;
     padding-bottom: 26px;
     position: relative;
-    &::after {;
+    &::after {
       @extend %line-decor;
       width: 185px;
     }
@@ -377,7 +381,7 @@
   }
 }
 
-.works-path {
+.works-path {  
   padding: 80px 0 30px;
   &__title {
     @extend %title-font;
@@ -579,7 +583,6 @@
     background-image: url(../images/inspiration-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
-
     height: 414px;
     z-index: -1;
   }
@@ -952,8 +955,6 @@
     opacity: 0;
     pointer-events: none;
   }
-  &__arrow-icon {
-  }
   &__list {
     display: flex;    
   }
@@ -1126,8 +1127,6 @@
     margin-bottom: 20px;
     font-size: 14px;
     color: #A1A1A1;
-  }
-  &__form-labelinput {
   }
   &__form-btn {
     border: none;
