--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -151,6 +151,7 @@
     padding: 42px 0 41px;
   }
 }
+
 .rightside-menu {
   position: absolute;
   right: 0;
@@ -281,7 +282,6 @@
     max-width: 576px;
     color: #5A5A5A;
   }
-
 }
 
 .new-collection {
@@ -647,6 +647,9 @@
 .map {
   margin-top: -53px;
   margin-bottom: 50px;
+  iframe {
+    height: 578px;
+  }
 }
 
 .contact {
@@ -722,8 +725,8 @@
     padding: 6px 60px;
     cursor: pointer;
   }
-
 }
+
   .contact-slider {
     padding-bottom: 102px;
   &__link {
